# examples

./: LICENSE  readme.md
bazel/empty/: BUILD.bazel  rules.bzl
bazel_repos/defs/: readme.md
bazel_repos/defs/demo_repo/: defs.bzl
bazel_repos/defs/demo_repo/internal/: rules.bzl
bazel_repos/defs/user_repo/: BUILD.bazel  WORKSPACE.bazel
bazel_repos/hello/: readme.md
bazel_repos/hello/demo_repo/: WORKSPACE.bazel  rules.bzl
bazel_repos/hello/user_repo/: BUILD.bazel
bazel_repos/toolchain/demo_repo/: BUILD.bazel  defs.bzl
bazel_repos/toolchain/demo_repo/internal/: BUILD.bazel  rules.bzl  toolchains.bzl
bazel_repos/toolchain/user_repo/: WORKSPACE.bazel
bazel_rules/: readme.md
bazel_rules/attributes/: BUILD.bazel  readme.md  rules.bzl
bazel_rules/empty/: readme.md  rules.bzl
bazel_rules/executable/: BUILD.bazel  readme.md  rules.bzl
bazel_rules/file/: BUILD.bazel  readme.md  rules.bzl
bazel_rules/hello/: BUILD.bazel  readme.md  rules.bzl
bazel_rules/labeled_output/: BUILD.bazel  rules.bzl
bazel_rules/macros/: BUILD.bazel  french.sh  readme.md  rules.bzl
bazel_rules/multiple_outputs/: BUILD.bazel  readme.md  rules.bzl
bazel_rules/multiple_source_files/: BUILD.bazel  readme.md  rules.bzl
bazel_rules/predeclared_output/: BUILD.bazel  readme.md  rules.bzl
bazel_rules/source/: BUILD.bazel  hello.tpl  readme.md  rules.bzl
bazel_rules_excluded/: readme.md  shell.nix
bazel_rules_excluded/nondeterministic/: rules.bzl
